[package]
name = "strands"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.80"
chrono = "0.4.38"
crossterm = "0.27.0"
itertools = "0.12.1"
ratatui = "0.26.2"
unicode-width = "0.1.11"
